[project]
name = "project-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flagembedding>=1.3.5",
    "langchain>=1.0.8",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.3",
    "langchain-postgres>=0.0.16",
    "langgraph>=1.0.3",
    "pgvector>=0.3.6",
    "psycopg>=3.2.0",
    "psycopg-binary>=3.2.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.2.1",
    "psycopg2-binary>=2.9.11",
]
